--- a/SRSDriver/Shared/Localize/he.lproj/Localizable.strings
+++ b/SRSDriver/Shared/Localize/he.lproj/Localizable.strings
@@ -3,28 +3,31 @@
 "language"="he";
 
 //APPLICATION_GLOBAL
-"app_name"="SRS Driver";
+"app_name"="DMS Driver";
 "app_version"="1.0.0.0";
 
 //COMMON
 "cancel"="Cancel";
 "ok"="OK";
 "save"="Save";
+"edit"="Edit";
 "back"="Back";
 "submit"="Submit";
+"reject"="Reject";
+"send"="Send";
 "finish"="Finish";
+"start"="Start";
 "unknown"="UNKNOWN";
-"error_invalid_email"="Email Invalid";
-"error_length_characters_android"="The minimum / maximum length is %1$d / %2$d chars";
-"error_length_characters_ios"="The minimum / maximum length is %d / %d chars";
-"error_invalid_birthday_android"="Driver must be greater than %1$d years old";
-"error_invalid_birthday_ios"="Driver must be greater than %d years old";
-"error_invalid_phone_android"="Phone number should have %1$d digits";
-"error_invalid_phone_ios"="Phone number should have %d digits";
 "clear"="Clear";
 "accept"="Accept";
+"error_field_required"="Required Field";
+"error_lost_network_connection"="No internet connection. Please check your network.";
 "deny"="Deny";
-"symbol_percent"="%";
+"orders"="Orders";
+"items"="Items";
+"map"="Map";
+"messages"="Messages";
+"done"="Done";
 
 //LOGIN_SCREEN
 "login_title"="LOGIN";
@@ -33,8 +36,40 @@
 "login_forgot_password"="Forgot password";
 "error_invalid_password"="Password Invalid";
 "error_incorrect_password"="Password Incorrect";
-"error_field_required"="Required Field";
-"error_network"="Have something wrong!\nTry again please";
-"error_fill_info"="Please check your inputed fields";
-"error_lost_network_connection"="No internet connection.";
-"error_location_request"="To using more functions, please allow location access.";
+"error_network"="An unknown issue has occured. Please try again.";
+"error_fill_info"="Some fields on your form are invalid. Please check your information.";
+
+//LIST_ORDERS
+"orders_have_no_orders"="No order for this day.";
+"orders_cancelled"="Cancelled";
+"orders_open"="Open";
+"orders_in_progress"="In Progress";
+"orders_delivered"="Delivered";
+
+//ODER_DETAIL
+"order_detail_title"="Details";
+"order_detail_signature"="Signature";
+"order_detail_notes"="Notes";
+"order_detail_picture"="Picture";
+"order_detail_order_reference"="Order Reference";
+"order_detail_status"="Status";
+"order_detail_delivery_date"="Delivery Date";
+"order_detail_delivery_contact_name"="Delivery Contact Name";
+"order_detail_delivery_contact_phone"="Delivery Contact Phone";
+"order_detail_delivery_address"="Delivery Address";
+"order_detail_description"="Description";
+"order_detail_unable_start"="Unable to Start";
+"order_detail_unable_finish"="Unable to Finish";
+"order_detail_add_note"="Add note";
+"order_detail_update_barcode"="Do you want to update barcode to %@?";
+"order_detail_add_order_item"="Add new order item with %@ and quality: %@";
+"order_detail_scan_barcode"="Scan Barcode";
+"order_detail_input_img_title_hint"="Type in title of image";
+"order_detail_input_img_title"="Please type in the title of your image";
+"order_detail_access_location"="Please allow access to your location to show direction";
+"order_detail_quality"="Quality";
+"order_detail_add_image_successfully"="Add image successfully";
+
+//REASON_LIST
+"reason_list_title"="Choose a reason";
+"reason_choose_at_least_reason"="Please choose at least one reason";
