--- a/SRSDriver/Shared/Localize/he.lproj/Localizable.strings
+++ b/SRSDriver/Shared/Localize/he.lproj/Localizable.strings
@@ -73,3 +73,7 @@
 //REASON_LIST
 "reason_list_title"="Choose a reason";
 "reason_choose_at_least_reason"="Please choose at least one reason";
+
+//MESSAGE_SCREEN
+"message_send_new_message"="Send new message";
+"message_add_message_hint"="Type message";
