[SRSDriver] - Update localize files, content, UIs

--- a/SRSDriver/Shared/Localize/en.lproj/Localizable.strings
+++ b/SRSDriver/Shared/Localize/en.lproj/Localizable.strings
@@ -38,13 +38,16 @@
 "error_incorrect_password"="Password Incorrect";
 "error_network"="An unknown issue has occured. Please try again.";
 "error_fill_info"="Some fields on your form are invalid. Please check your information.";
+"login_sign_in"="Sign In";
+"login_guide"="Sign in to access your account.";
+"login_remember_me"="Remember Me";
 
 //LIST_ORDERS
 "orders_have_no_orders"="No order for this day.";
 "orders_cancelled"="Cancelled";
-"orders_open"="Open";
+"orders_open"="New";
 "orders_in_progress"="In Progress";
-"orders_delivered"="Delivered";
+"orders_delivered"="Finished";
 
 //ODER_DETAIL
 "order_detail_title"="Details";
