[SRSDriver] - Fix push notification, localize text

--- a/SRSDriver/Shared/Localize/he.lproj/Localizable.strings
+++ b/SRSDriver/Shared/Localize/he.lproj/Localizable.strings
@@ -56,9 +56,9 @@
 "order_detail_picture"="Picture";
 "order_detail_order_reference"="Order Reference";
 "order_detail_status"="Status";
-"order_detail_delivery_date"="Delivery Date";
-"order_detail_delivery_contact_name"="Delivery Contact Name";
-"order_detail_delivery_contact_phone"="Delivery Contact Phone";
+"order_detail_expected_date"="Delivery Date";
+"order_detail_contact_name"="Delivery Contact Name";
+"order_detail_phone"="Delivery Contact Phone";
 "order_detail_delivery_address"="Delivery Address";
 "order_detail_description"="Description";
 "order_detail_unable_start"="Unable to Start";
@@ -72,6 +72,8 @@
 "order_detail_access_location"="Please allow access to your location to show direction";
 "order_detail_quality"="Quality";
 "order_detail_add_image_successfully"="Add image successfully";
+"order_detail_add_signature_successfully"="Add signature successfully";
+"order_detail_should_be_start"="Should be change order status first";
 
 //REASON_LIST
 "reason_list_title"="Choose a reason";
