--- a/SRSDriver/Shared/Localize/en.lproj/Localizable.strings
+++ b/SRSDriver/Shared/Localize/en.lproj/Localizable.strings
@@ -43,14 +43,14 @@
 "login_remember_me"="Remember Me";
 
 //LIST_ORDERS
-"orders_have_no_orders"="No order for this day.";
+"orders_have_no_orders"="You have no order";
 "orders_cancelled"="Cancelled";
 "orders_open"="New";
 "orders_in_progress"="In Progress";
 "orders_delivered"="Finished";
 
 //ODER_DETAIL
-"order_detail_title"="Details";
+"order_detail_title"="Detail";
 "order_detail_signature"="Signature";
 "order_detail_notes"="Notes";
 "order_detail_picture"="Picture";
@@ -59,25 +59,31 @@
 "order_detail_expected_date"="Expected Date";
 "order_detail_contact_name"="Contact Name";
 "order_detail_phone"="Phone";
-"order_detail_delivery_address"="Delivery Address";
+"order_detail_delivery_address"="Address";
 "order_detail_description"="Description";
+"order_detail_order_type"="Type";
 "order_detail_unable_start"="Unable to Start";
 "order_detail_unable_finish"="Unable to Finish";
-"order_detail_add_note"="Add note";
-"order_detail_update_barcode"="Do you want to update barcode to %@?";
-"order_detail_add_order_item"="Add new order item with barcode %@ and quality:";
+"order_detail_add_note"="Add Note";
+"order_detail_update_barcode"="Update barcode: %@?";
+"order_detail_add_order_item"="Barcode: %@";
 "order_detail_scan_barcode"="Scan Barcode";
-"order_detail_input_img_title_hint"="Type in title of image";
-"order_detail_input_img_title"="Please type in the title of your image";
-"order_detail_access_location"="Please allow access to your location to show direction";
-"order_detail_quality"="Quality";
+"order_detail_input_img_title_hint"="Enter title";
+"order_detail_input_img_title"="Enter title";
+"order_detail_access_location"="Allow to access your location for direction";
+"order_detail_quality"="Quantity";
 "order_detail_add_image_successfully"="Add image successfully";
 "order_detail_add_signature_successfully"="Add signature successfully";
 "order_detail_should_be_start"="Should be change order status first";
+"order_detail_package"="Package";
+"order_detail_qty"="Quantity";
+"order_detail_desc"="Description";
+"order_detail_barcode"="Barcode";
+"order_detail_take_picture"="Take Picture";
 
 //REASON_LIST
-"reason_list_title"="Choose a reason";
-"reason_choose_at_least_reason"="Please choose at least one reason";
+"reason_list_title"="Select reason";
+"reason_choose_at_least_reason"="Please select at least one reason";
 
 //MESSAGE_SCREEN
 "message_send_new_message"="Send new message";
