--- a/SRSDriver/Shared/Localize/he.lproj/Localizable.strings
+++ b/SRSDriver/Shared/Localize/he.lproj/Localizable.strings
@@ -3,82 +3,88 @@
 "language"="he";
 
 //APPLICATION_GLOBAL
-"app_name"="DMS Driver";
+"app_name"="מנהל התקן DMS";
 "app_version"="1.0.0.0";
 
 //COMMON
-"cancel"="Cancel";
-"ok"="OK";
-"save"="Save";
-"edit"="Edit";
-"back"="Back";
-"submit"="Submit";
-"reject"="Reject";
-"send"="Send";
-"finish"="Finish";
-"start"="Start";
-"unknown"="UNKNOWN";
-"clear"="Clear";
-"accept"="Accept";
-"error_field_required"="Required Field";
-"error_lost_network_connection"="No internet connection. Please check your network.";
-"deny"="Deny";
-"orders"="Orders";
-"items"="Items";
-"map"="Map";
-"messages"="Messages";
-"done"="Done";
+"cancel"="לְבַטֵל";
+"ok"="בסדר";
+"save"="להציל";
+"edit"="לַעֲרוֹך";
+"back"="חזור";
+"submit"="שלח";
+"reject"="לִדחוֹת";
+"send"="לִשְׁלוֹחַ";
+"finish"="סִיוּם";
+"start"="הַתחָלָה";
+"unknown"="לא ידוע";
+"clear"="ברור";
+"accept"="לְקַבֵּל";
+"error_field_required"="שדה נדרש";
+"error_lost_network_connection"="אין חיבור אינטרנט. בדוק את הרשת שלך.";
+"deny"="לְהַכּחִישׁ";
+"orders"="הזמנות";
+"items"="פריטים";
+"map"="מַפָּה";
+"messages"="הודעות";
+"done"="בוצע";
 
 //LOGIN_SCREEN
-"login_title"="LOGIN";
-"login_username_hint"="User Name";
-"login_password_hint"="Password";
-"login_forgot_password"="Forgot password";
-"error_invalid_password"="Password Invalid";
-"error_incorrect_password"="Password Incorrect";
-"error_network"="An unknown issue has occured. Please try again.";
-"error_fill_info"="Some fields on your form are invalid. Please check your information.";
-"login_sign_in"="Sign In";
-"login_guide"="Sign in to access your account.";
-"login_remember_me"="Remember Me";
+"login_title"="התחברות";
+"login_username_hint"="שם משתמש";
+"login_password_hint"="סיסמה";
+"login_forgot_password"="שכחת את הסיסמא";
+"error_invalid_password"="הסיסימא אינה תקפה";
+"error_incorrect_password"="סיסמא לא נכונה";
+"error_network"="אירעה בעיה לא ידועה. בבקשה נסה שוב.";
+"error_fill_info"="שדות מסוימים בטופס שלך אינם חוקיים. בדוק את המידע שלך.";
+"login_sign_in"="היכנס";
+"login_guide"="היכנס כדי לגשת לחשבון שלך.";
+"login_remember_me"="זכור אותי";
 
 //LIST_ORDERS
-"orders_have_no_orders"="No order for this day.";
-"orders_cancelled"="Cancelled";
-"orders_open"="New";
-"orders_in_progress"="In Progress";
-"orders_delivered"="Finished";
+"orders_have_no_orders"="אין לך הזמנה";
+"orders_cancelled"="מבוטל";
+"orders_open"="חָדָשׁ";
+"orders_in_progress"="בתהליך";
+"orders_delivered"="גָמוּר";
 
 //ODER_DETAIL
-"order_detail_title"="Details";
-"order_detail_signature"="Signature";
-"order_detail_notes"="Notes";
-"order_detail_picture"="Picture";
-"order_detail_order_reference"="Order Reference";
-"order_detail_status"="Status";
-"order_detail_expected_date"="Delivery Date";
-"order_detail_contact_name"="Delivery Contact Name";
-"order_detail_phone"="Delivery Contact Phone";
-"order_detail_delivery_address"="Delivery Address";
-"order_detail_description"="Description";
-"order_detail_unable_start"="Unable to Start";
-"order_detail_unable_finish"="Unable to Finish";
-"order_detail_add_note"="Add note";
-"order_detail_update_barcode"="Do you want to update barcode to %@?";
-"order_detail_add_order_item"="Add new order item with %@ and quality: %@";
-"order_detail_scan_barcode"="Scan Barcode";
-"order_detail_input_img_title_hint"="Type in title of image";
-"order_detail_input_img_title"="Please type in the title of your image";
-"order_detail_access_location"="Please allow access to your location to show direction";
-"order_detail_quality"="Quality";
-"order_detail_add_image_successfully"="Add image successfully";
-"order_detail_add_signature_successfully"="Add signature successfully";
-"order_detail_should_be_start"="Should be change order status first";
+"order_detail_title"="פרט";
+"order_detail_signature"="חֲתִימָה";
+"order_detail_notes"="הערות";
+"order_detail_picture"="תְמוּנָה";
+"order_detail_order_reference"="הזמנה Ref";
+"order_detail_status"="סטָטוּס";
+"order_detail_expected_date"="תאריך צפוי";
+"order_detail_contact_name"="שם איש קשר";
+"order_detail_phone"="טלפון";
+"order_detail_delivery_address"="כתובת";
+"order_detail_description"="תיאור";
+"order_detail_order_type"="סוּג";
+"order_detail_unable_start"="לא יכול להתחיל";
+"order_detail_unable_finish"="לא ניתן לסיים";
+"order_detail_add_note"="להוסיף הערה";
+"order_detail_update_barcode"="עדכון ברקוד:% @?";
+"order_detail_add_order_item"="ברקוד:% @";
+"order_detail_scan_barcode"="ברקוד סריקה";
+"order_detail_input_img_title_hint"="הזן כותרת";
+"order_detail_input_img_title"="הזן כותרת";
+"order_detail_access_location"="אפשר לגשת למיקום שלך לקבלת כיוון";
+"order_detail_quality"="כַּמוּת";
+"order_detail_add_image_successfully"="הוסף תמונה בהצלחה";
+"order_detail_add_signature_successfully"="הוסף חתימה בהצלחה";
+"order_detail_should_be_start"="יש לשנות את סטטוס ההזמנה תחילה";
+"order_detail_package"="חֲבִילָה";
+"order_detail_qty"="כַּמוּת";
+"order_detail_desc"="תיאור";
+"order_detail_barcode"="ברקוד";
+"order_detail_take_picture"="צלם תמונה";
 
 //REASON_LIST
-"reason_list_title"="Choose a reason";
-"reason_choose_at_least_reason"="Please choose at least one reason";
+"reason_list_title"="בחר סיבה";
+"reason_choose_at_least_reason"="בחר סיבה אחת לפחות";
 
 //MESSAGE_SCREEN
-"message_send_new_message"="Send new message";
-"message_add_message_hint"="Type message";
+"message_send_new_message"="שלח הודעה חדשה";
+"message_add_message_hint"="הקלד הודעה";
