[SRSDriver] - Implement package items

--- a/SRSDriver/Shared/Localize/en.lproj/Localizable.strings
+++ b/SRSDriver/Shared/Localize/en.lproj/Localizable.strings
@@ -25,6 +25,7 @@
 "deny"="Deny";
 "orders"="Orders";
 "items"="Items";
+"packages"="Packages";
 "map"="Map";
 "messages"="Messages";
 "done"="Done";
@@ -80,6 +81,7 @@
 "order_detail_desc"="Description";
 "order_detail_barcode"="Barcode";
 "order_detail_take_picture"="Take Picture";
+"order_detail_total"="Total";
 
 //REASON_LIST
 "reason_list_title"="Select reason";
