--- a/SRSDriver/Shared/Localize/he.lproj/Localizable.strings
+++ b/SRSDriver/Shared/Localize/he.lproj/Localizable.strings
@@ -25,6 +25,7 @@
 "deny"="לְהַכּחִישׁ";
 "orders"="הזמנות";
 "items"="פריטים";
+"packages"="חבילות\n";
 "map"="מַפָּה";
 "messages"="הודעות";
 "done"="בוצע";
@@ -80,6 +81,7 @@
 "order_detail_desc"="תיאור";
 "order_detail_barcode"="ברקוד";
 "order_detail_take_picture"="צלם תמונה";
+"order_detail_total"="סה\"כ";
 
 //REASON_LIST
 "reason_list_title"="בחר סיבה";
