[SRSDriver] - Add unmatch barcode

--- a/SRSDriver/Shared/Localize/en.lproj/Localizable.strings
+++ b/SRSDriver/Shared/Localize/en.lproj/Localizable.strings
@@ -82,7 +82,7 @@
 "order_detail_barcode"="Barcode";
 "order_detail_take_picture"="Take Picture";
 "order_detail_total"="Total";
-
+"order_detail_barcode_notmatch"="Barcode does not match";
 //REASON_LIST
 "reason_list_title"="Select reason";
 "reason_choose_at_least_reason"="Please select at least one reason";
