--- a/SRSDriver/Shared/Localize/he.lproj/Localizable.strings
+++ b/SRSDriver/Shared/Localize/he.lproj/Localizable.strings
@@ -82,6 +82,7 @@
 "order_detail_barcode"="ברקוד";
 "order_detail_take_picture"="צלם תמונה";
 "order_detail_total"="סה\"כ";
+"order_detail_barcode_notmatch"="ברקוד אינו תואם";
 
 //REASON_LIST
 "reason_list_title"="בחר סיבה";
