[DMS] - packup before create brand.

--- a/SRSDriver/Shared/Localize/en.lproj/Localizable.strings
+++ b/SRSDriver/Shared/Localize/en.lproj/Localizable.strings
@@ -42,7 +42,10 @@
 "login_sign_in"="Sign In";
 "login_guide"="Sign in to access your account.";
 "login_remember_me"="Remember Me";
-
+// MENU
+"menu"="Menu";
+"change_password"="Change Password";
+"log_out"="Logout";
 //LIST_ORDERS
 "orders_have_no_orders"="You have no order";
 "orders_open"="New";
@@ -79,6 +82,8 @@
 "order_detail_add_image_successfully"="Add image successfully";
 "order_detail_add_signature_successfully"="Add signature successfully";
 "order_detail_should_be_start"="Should be change order status first";
+"cooler_name"="Cooler Name:";
+"cooler_id"="Cooler ID:";
 "order_detail_package"="Package:";
 "order_detail_qty"="Quantity:";
 "order_detail_desc"="Description:";
