--- a/SRSDriver/Shared/Localize/he.lproj/Localizable.strings
+++ b/SRSDriver/Shared/Localize/he.lproj/Localizable.strings
@@ -43,6 +43,11 @@
 "login_guide"="היכנס כדי לגשת לחשבון שלך.";
 "login_remember_me"="זכור אותי";
 
+//MENU
+"menu"="תַפרִיט";
+"change_password"="שנה סיסמא";
+"log_out"="להתנתק";
+
 //LIST_ORDERS
 "orders_have_no_orders"="אין לך הזמנה";
 "orders_cancelled"="מבוטל";
@@ -80,10 +85,12 @@
 "order_detail_add_image_successfully"="הוסף תמונה בהצלחה";
 "order_detail_add_signature_successfully"="הוסף חתימה בהצלחה";
 "order_detail_should_be_start"="יש לשנות את סטטוס ההזמנה תחילה";
-"order_detail_package"="חֲבִילָה";
-"order_detail_qty"="כַּמוּת";
-"order_detail_desc"="תיאור";
-"order_detail_barcode"="ברקוד";
+"cooler_name"="Cooler Name:";
+"cooler_id"="Cooler ID:";
+"order_detail_package"=":חֲבִילָה";
+"order_detail_qty"=":כַּמוּת";
+"order_detail_desc"=":תיאור";
+"order_detail_barcode"=":ברקוד";
 "order_detail_take_picture"="צלם תמונה";
 "order_detail_total"="סה\"כ";
 "order_detail_barcode_notmatch"="ברקוד אינו תואם";
