--- a/SRSDriver/Shared/Localize/en.lproj/Localizable.strings
+++ b/SRSDriver/Shared/Localize/en.lproj/Localizable.strings
@@ -82,9 +82,8 @@
 "order_detail_add_image_successfully"="Add image successfully";
 "order_detail_add_signature_successfully"="Add signature successfully";
 "order_detail_should_be_start"="Should be change order status first";
-"cooler_name"="Cooler Name:";
-"cooler_id"="Cooler ID:";
-"order_detail_package"="Package:";
+//"order_detail_package"="Package:"; // DMS-Core
+"order_detail_package"="Cooler:"; // DMS-Masof
 "order_detail_qty"="Quantity:";
 "order_detail_desc"="Description:";
 "order_detail_barcode"="Barcode:";
