--- a/SRSDriver/Shared/Localize/he.lproj/Localizable.strings
+++ b/SRSDriver/Shared/Localize/he.lproj/Localizable.strings
@@ -85,8 +85,8 @@
 "order_detail_add_image_successfully"="הוסף תמונה בהצלחה";
 "order_detail_add_signature_successfully"="הוסף חתימה בהצלחה";
 "order_detail_should_be_start"="יש לשנות את סטטוס ההזמנה תחילה";
-//"order_detail_package"=":חֲבִילָה";// DMS-Core
-"order_detail_package"=":מְצַנֵן";// DMS-Masof
+"order_detail_package"=":חֲבִילָה";// DMS-Core
+//"order_detail_package"=":מְצַנֵן";// DMS-Masof
 "order_detail_qty"=":כַּמוּת";
 "order_detail_desc"=":תיאור";
 "order_detail_barcode"=":ברקוד";
