[DMS][Core] - change Cooler to Package

--- a/SRSDriver/Shared/Localize/en.lproj/Localizable.strings
+++ b/SRSDriver/Shared/Localize/en.lproj/Localizable.strings
@@ -26,6 +26,7 @@
 "orders"="Orders";
 "items"="Items";
 "packages"="Packages";
+//"packages"="Cooler"; // DMS-Masof
 "map"="Map";
 "messages"="Messages";
 "done"="Done";
