--- a/SRSDriver/Shared/Localize/he.lproj/Localizable.strings
+++ b/SRSDriver/Shared/Localize/he.lproj/Localizable.strings
@@ -25,7 +25,8 @@
 "deny"="לְהַכּחִישׁ";
 "orders"="הזמנות";
 "items"="פריטים";
-"packages"="חבילות\n";
+"packages"="חבילות\n"; // DMS-Core
+//"packages"="מְצַנֵן"; // DMS-Masof
 "map"="מַפָּה";
 "messages"="הודעות";
 "done"="בוצע";
