[DMS][Core] - update trước khi phân nhánh.

--- a/SRSDriver/Supporting Files/DMSDriver_Masof/Localize/en.lproj/Localizable.strings
+++ b/SRSDriver/Supporting Files/DMSDriver_Masof/Localize/en.lproj/Localizable.strings
@@ -25,8 +25,7 @@
 "deny"="Deny";
 "orders"="Orders";
 "items"="Items";
-"packages"="Packages";
-//"packages"="Cooler"; // DMS-Masof
+"packages"="Cooler";
 "map"="Map";
 "messages"="Messages";
 "done"="Done";
@@ -83,8 +82,7 @@
 "order_detail_add_image_successfully"="Add image successfully";
 "order_detail_add_signature_successfully"="Add signature successfully";
 "order_detail_should_be_start"="Should be change order status first";
-"order_detail_package"="Package:"; // DMS-Core
-//"order_detail_package"="Cooler:"; // DMS-Masof
+"order_detail_package"="Cooler:";
 "order_detail_qty"="Quantity:";
 "order_detail_desc"="Description:";
 "order_detail_barcode"="Barcode:";
