--- a/SRSDriver/Supporting Files/DMSDriver_Masof/Localize/he.lproj/Localizable.strings
+++ b/SRSDriver/Supporting Files/DMSDriver_Masof/Localize/he.lproj/Localizable.strings
@@ -25,8 +25,7 @@
 "deny"="לְהַכּחִישׁ";
 "orders"="הזמנות";
 "items"="פריטים";
-"packages"="חבילות\n"; // DMS-Core
-//"packages"="מְצַנֵן"; // DMS-Masof
+"packages"="מְצַנֵן";
 "map"="מַפָּה";
 "messages"="הודעות";
 "done"="בוצע";
@@ -86,8 +85,7 @@
 "order_detail_add_image_successfully"="הוסף תמונה בהצלחה";
 "order_detail_add_signature_successfully"="הוסף חתימה בהצלחה";
 "order_detail_should_be_start"="יש לשנות את סטטוס ההזמנה תחילה";
-"order_detail_package"=":חֲבִילָה";// DMS-Core
-//"order_detail_package"=":מְצַנֵן";// DMS-Masof
+"order_detail_package"=":מְצַנֵן";
 "order_detail_qty"=":כַּמוּת";
 "order_detail_desc"=":תיאור";
 "order_detail_barcode"=":ברקוד";
