--- a/SRSDriver/Supporting Files/DMSDriver_Masof/Localize/he.lproj/Localizable.strings
+++ b/SRSDriver/Supporting Files/DMSDriver_Masof/Localize/he.lproj/Localizable.strings
@@ -85,10 +85,10 @@
 "order_detail_add_image_successfully"="הוסף תמונה בהצלחה";
 "order_detail_add_signature_successfully"="הוסף חתימה בהצלחה";
 "order_detail_should_be_start"="יש לשנות את סטטוס ההזמנה תחילה";
-"order_detail_package"=":מְצַנֵן";
-"order_detail_qty"=":כַּמוּת";
-"order_detail_desc"=":תיאור";
-"order_detail_barcode"=":ברקוד";
+"order_detail_package"="מְצַנֵן:";
+"order_detail_qty"="כַּמוּת:";
+"order_detail_desc"="תיאור:";
+"order_detail_barcode"="ברקוד:";
 "order_detail_take_picture"="צלם תמונה";
 "order_detail_total"="סה\"כ";
 "order_detail_barcode_notmatch"="ברקוד אינו תואם";
