[99Cents] Done Routes List Screen

--- a/SRSDriver/Supporting Files/DMSDriver_Core/Localize/en.lproj/Localizable.strings
+++ b/SRSDriver/Supporting Files/DMSDriver_Core/Localize/en.lproj/Localizable.strings
@@ -96,3 +96,7 @@
 //MESSAGE_SCREEN
 "message_send_new_message"="Send new message";
 "message_add_message_hint"="Type message";
+
+//ROUTE_LIST_SCREEN
+"You have no route"="You have no route";
+
