--- a/SRSDriver/Supporting Files/DMSDriver_Core/Localize/he.lproj/Localizable.strings
+++ b/SRSDriver/Supporting Files/DMSDriver_Core/Localize/he.lproj/Localizable.strings
@@ -100,3 +100,7 @@
 //MESSAGE_SCREEN
 "message_send_new_message"="שלח הודעה חדשה";
 "message_add_message_hint"="הקלד הודעה";
+
+//ROUTE_LIST_SCREEN
+"You have no route"="You have no route"; //new
+
