[DirectMail] update localization in Login Screen

--- a/DMSDriver/DMSDriver/Supporting Files/Localize/he.lproj/Localizable.strings
+++ b/DMSDriver/DMSDriver/Supporting Files/Localize/he.lproj/Localizable.strings
@@ -59,7 +59,10 @@
 "orders_missing_in_truck" = "Missing in Trunk";
 "orders_missing_at_pick_up" = "Missing at Pick-up";
 
+"Total Order"="Total Order"; //new
+
 //ODER_DETAIL
+"Delivery number"="מס' משלוח";
 "order_detail_title"="פרט";
 "order_detail_signature"="חֲתִימָה";
 "order_detail_notes"="הערות";
@@ -103,4 +106,6 @@
 
 //ROUTE_LIST_SCREEN
 "You have no route"="You have no route"; //new
+"Route Number"="Route number";//new
+"Route List"="Route List";//new
 
