--- a/DMSDriver/DMSDriver/Supporting Files/Localize/en.lproj/Localizable.strings
+++ b/DMSDriver/DMSDriver/Supporting Files/Localize/en.lproj/Localizable.strings
@@ -6,6 +6,7 @@
 "app_name"="DMS Driver";
 "app_version"="1.0.0.0";
 
+
 //COMMON
 "cancel"="Cancel";
 "ok"="OK";
@@ -34,7 +35,7 @@
 "login_title"="LOGIN";
 "login_username_hint"="User Name";
 "login_password_hint"="Password";
-"login_forgot_password"="Forgot password";
+"login_forgot_password"="Forgot your password?";
 "error_invalid_password"="Password Invalid";
 "error_incorrect_password"="Password Incorrect";
 "error_network"="An unknown issue has occured. Please try again.";
@@ -56,7 +57,10 @@
 "orders_missing_at_pick_up" = "Missing at Pick-up";
 "orders_cancelled"="Cancelled";
 
+"Total Order"="Total Order";
+
 //ODER_DETAIL
+"Delivery number"="Delivery number";
 "order_detail_title"="Detail";
 "order_detail_signature"="Signature";
 "order_detail_notes"="Notes";
@@ -99,4 +103,6 @@
 
 //ROUTE_LIST_SCREEN
 "You have no route"="You have no route";
+"Route Number"="Route number";
+"Route List"="Route List";
 
