[DirectMail]-localized in Route List VC

--- a/DMSDriver/DMSDriver/Supporting Files/Localize/he.lproj/Localizable.strings
+++ b/DMSDriver/DMSDriver/Supporting Files/Localize/he.lproj/Localizable.strings
@@ -51,7 +51,7 @@
 //LIST_ORDERS
 "orders_have_no_orders"="אין לך הזמנה";
 "orders_cancelled"="מבוטל";
-"orders_open"="חָדָשׁ";
+"New"="חָדָשׁ";
 "orders_in_progress"="בתהליך";
 "orders_delivered"="גָמוּר";
 
