--- a/DMSDriver/DMSDriver/Supporting Files/Localize/en.lproj/Localizable.strings
+++ b/DMSDriver/DMSDriver/Supporting Files/Localize/en.lproj/Localizable.strings
@@ -49,7 +49,7 @@
 "log_out"="Logout";
 //LIST_ORDERS
 "orders_have_no_orders"="You have no order";
-"orders_open"="New";
+"New"="New";
 "orders_in_progress"="In Progress";
 "orders_delivered"="Finished";
 "picked_up" = "Picked Up";
