[DirectMail]-localized in Menu Screen

--- a/DMSDriver/DMSDriver/Supporting Files/Localize/en.lproj/Localizable.strings
+++ b/DMSDriver/DMSDriver/Supporting Files/Localize/en.lproj/Localizable.strings
@@ -43,10 +43,13 @@
 "login_sign_in"="Sign In";
 "login_guide"="Sign in to access your account.";
 "login_remember_me"="Remember Me";
+
 // MENU
 "menu"="Menu";
 "change_password"="Change Password";
-"log_out"="Logout";
+"Logout"="Logout";
+"Routes" = "Routes";
+
 //LIST_ORDERS
 "orders_have_no_orders"="You have no order";
 "New"="New";
