--- a/DMSDriver/DMSDriver/Supporting Files/Localize/he.lproj/Localizable.strings
+++ b/DMSDriver/DMSDriver/Supporting Files/Localize/he.lproj/Localizable.strings
@@ -46,7 +46,9 @@
 //MENU
 "menu"="תַפרִיט";
 "change_password"="שנה סיסמא";
-"log_out"="להתנתק";
+"Logout"="להתנתק";
+"Routes" = "Routes";
+
 
 //LIST_ORDERS
 "orders_have_no_orders"="אין לך הזמנה";
