--- a/DMSDriver/DMSDriver/Supporting Files/Localize/he.lproj/Localizable.strings
+++ b/DMSDriver/DMSDriver/Supporting Files/Localize/he.lproj/Localizable.strings
@@ -23,10 +23,10 @@
 "error_field_required"="שדה נדרש";
 "error_lost_network_connection"="אין חיבור אינטרנט. בדוק את הרשת שלך.";
 "deny"="לְהַכּחִישׁ";
-"orders"="הזמנות";
+"Orders"="הזמנות";
 "items"="פריטים";
-"packages"="חבילות\n"; // DMS-Core
-"map"="מַפָּה";
+"Packages"="חבילות\n"; // DMS-Core
+"Map"="מַפָּה";
 "messages"="הודעות";
 "done"="בוצע";
 
@@ -51,17 +51,22 @@
 
 
 //LIST_ORDERS
-"orders_have_no_orders"="אין לך הזמנה";
-"orders_cancelled"="מבוטל";
+"Orders List"="Orders List";
+"You have no order"="אין לך הזמנה";
 "New"="חָדָשׁ";
-"orders_in_progress"="בתהליך";
-"orders_delivered"="גָמוּר";
+"In Progress"="בתהליך";
+"Finished"="גָמוּר";
+"Picked Up" = "Picked Up";
+"Missing in Trunk" = "Missing in Trunk";
+"Missing at Pick-up" = "Missing at Pick-up";
+"Cancelled"="מבוטל";
 
-"picked_up" = "Picked Up";
-"orders_missing_in_truck" = "Missing in Trunk";
-"orders_missing_at_pick_up" = "Missing at Pick-up";
 
 "Total Order"="Total Order"; //new
+"Store"="Store";//New
+"Warehouse"="Warehouse";//New
+"Expected time"="Expected time";//New
+
 
 //ODER_DETAIL
 "Delivery number"="מס' משלוח";
@@ -76,7 +81,7 @@
 "order_detail_phone"="טלפון";
 "order_detail_delivery_address"="כתובת";
 "order_detail_description"="תיאור";
-"order_detail_order_type"="סוּג";
+"Type"="סוּג";
 "order_detail_unable_start"="לא יכול להתחיל";
 "order_detail_unable_finish"="לא ניתן לסיים";
 "order_detail_add_note"="להוסיף הערה";
