--- a/DMSDriver/DMSDriver/Supporting Files/Localize/en.lproj/Localizable.strings
+++ b/DMSDriver/DMSDriver/Supporting Files/Localize/en.lproj/Localizable.strings
@@ -32,6 +32,7 @@
 "Message"="Message";
 "done"="Done";
 "Pull to refresh"="Pull to refresh";
+"Uploaded Successful"="Uploaded Successful";
 
 //LOGIN_SCREEN
 "login_title"="LOGIN";
@@ -76,9 +77,9 @@
 "Order Information"="Order Information";
 "Information"="Information";
 "Order Id"="Order Id";
-"order_detail_signature"="Signature";
+"Signature"="Signature";
 "order_detail_notes"="Notes";
-"order_detail_picture"="Picture";
+"Picture"="Picture";
 "Order Ref"="Order Ref";
 "Status"="Status";
 "Expected Date"="Expected Date";
@@ -100,8 +101,7 @@
 "order_detail_update_barcode"="Update barcode: %@?";
 "order_detail_add_order_item"="Barcode: %@";
 "order_detail_scan_barcode"="Scan Barcode";
-"order_detail_input_img_title_hint"="Enter title";
-"order_detail_input_img_title"="Enter title";
+"Enter title"="Enter title";
 "order_detail_access_location"="Allow to access your location for direction";
 "order_detail_quality"="Quantity";
 "order_detail_add_image_successfully"="Add image successfully";
@@ -128,3 +128,5 @@
 "Route Number"="Route number";
 "Route List"="Route List";
 
+//PICTURE
+"No images have been added"="No images have been added";
