--- a/DMSDriver/DMSDriver/Supporting Files/Localize/he.lproj/Localizable.strings
+++ b/DMSDriver/DMSDriver/Supporting Files/Localize/he.lproj/Localizable.strings
@@ -29,6 +29,7 @@
 "Map"="מַפָּה";
 "Messages"="הודעות";
 "Message"="Message";//new
+"Uploaded Successful"="Uploaded Successful";//new
 "done"="בוצע";
 "Pull to refresh"="לחץ כדי לרענן";
 
@@ -78,9 +79,9 @@
 "Order Information"="Order Information";//new
 "Information"="Information";//new
 "Order Id"="Order Id";
-"order_detail_signature"="חֲתִימָה";
+"Signature"="חֲתִימָה";
 "order_detail_notes"="הערות";
-"order_detail_picture"="תְמוּנָה";
+"Picture"="תְמוּנָה";
 "Order Ref"="הזמנה Ref";
 "Status"="סטָטוּס";
 "Expected Date"="תאריך צפוי";
@@ -102,8 +103,7 @@
 "order_detail_update_barcode"="עדכון ברקוד:% @?";
 "order_detail_add_order_item"="ברקוד:% @";
 "order_detail_scan_barcode"="ברקוד סריקה";
-"order_detail_input_img_title_hint"="הזן כותרת";
-"order_detail_input_img_title"="הזן כותרת";
+"Enter title"="הזן כותרת";
 "order_detail_access_location"="אפשר לגשת למיקום שלך לקבלת כיוון";
 "order_detail_quality"="כַּמוּת";
 "order_detail_add_image_successfully"="הוסף תמונה בהצלחה";
@@ -130,4 +130,8 @@
 "You have no route"="You have no route"; //new
 "Route Number"="Route number";//new
 "Route List"="Route List";//new
+
+//PICTURE
+"No images have been added"="No images have been added";//new
+
 
