update localized in Map Screen

--- a/DMSDriver/DMSDriver/Supporting Files/Localize/en.lproj/Localizable.strings
+++ b/DMSDriver/DMSDriver/Supporting Files/Localize/en.lproj/Localizable.strings
@@ -130,3 +130,14 @@
 
 //PICTURE
 "No images have been added"="No images have been added";
+
+//PACKAGES
+"Delivery"="Delivery";
+"Backhaul"="Backhaul";
+"Package On Truck" = "Package On Truck";
+"Total cases"="Total cases";
+"Case complete"="Case complete";
+"Case not complete"="Case not complete";
+"Total pallets"="Total pallets";
+"Pallet complete"="Pallet complete";
+"Pallet not complete"="Pallet not complete";
