--- a/DMSDriver/DMSDriver/Supporting Files/Localize/he.lproj/Localizable.strings
+++ b/DMSDriver/DMSDriver/Supporting Files/Localize/he.lproj/Localizable.strings
@@ -134,4 +134,13 @@
 //PICTURE
 "No images have been added"="No images have been added";//new
 
-
+//PACKAGES
+"Delivery"="Delivery";//new
+"Backhaul"="Backhaul";//new
+"Package On Truck" = "Package On Truck";//new
+"Total cases"="Total cases";//new
+"Case complete"="Case complete";//new
+"Case not complete"="Case not complete";//new
+"Total pallets"="Total pallets";//new
+"Pallet complete"="Pallet complete";//new
+"Pallet not complete"="Pallet not complete";//new
