update order detail screen

--- a/DMSDriver/DMSDriver/Supporting Files/Localize/en.lproj/Localizable.strings
+++ b/DMSDriver/DMSDriver/Supporting Files/Localize/en.lproj/Localizable.strings
@@ -82,6 +82,13 @@
 "Store"="Store";
 "Warehouse"="Warehouse";
 "Expected time"="Expected time";
+"Records from"="Records from";
+"From date"="From date";
+"To date"="To date";
+"Delivery number"="Delivery number";
+"Urgency"="Urgency";
+
+
 
 //ODER_DETAIL
 "Order Detail"="Order Detail";
@@ -129,6 +136,41 @@
 "order_detail_take_picture"="Take Picture";
 "order_detail_total"="Total";
 "order_detail_barcode_notmatch"="Barcode does not match";
+
+"Hour"="Hour";
+"Date"="Date";
+"Certificate number"="Certificate number";
+"Client name"="Client name";
+"Customer name"="Customer name";
+"Type"="Type";
+"Urgency"="Urgency";
+"Double type"="Double type";
+"Packages number"="Packages number";
+"Cartons number"="Cartons number";
+"Surfaces number"="Surfaces number";
+"Afternoon"="Afternoon";
+"Vehicle"="Vehicle";
+"From today to tomorrow"="From today to tomorrow";
+"Collection from company"="Collection from company";
+"Starting street"="Starting street";
+"Starting city"="Starting city";
+"Transfer to company"="Transfer to company";
+"Destination street"="Destination street";
+"Destination city"="Destination city";
+"Standby"="Standby";
+"Barcode"="Barcode";
+"Collect call"="Collect call";
+"Status"="Status";
+"Failure cause"="Failure cause";
+"Comments"="Comments";
+"Certificate number (Client)"="Certificate number (Client)";
+"Execution time"="Execution time";
+"Receiver name"="Receiver name";
+"Second receiver name"="Second receiver name";
+
+
+
+
 //REASON_LIST
 "Select Reason"="Select Reason";
 "Please select at least one reason"="Please select at least one reason";
