--- a/DMSDriver/DMSDriver/Supporting Files/Localize/he.lproj/Localizable.strings
+++ b/DMSDriver/DMSDriver/Supporting Files/Localize/he.lproj/Localizable.strings
@@ -78,6 +78,12 @@
 "Missing in Trunk" = "Missing in Trunk";
 "Missing at Pick-up" = "Missing at Pick-up";
 "Cancelled"="מבוטל";
+"Records from"="רשומות מ";
+"From date"="מתאריך";
+"To date"="עד תאריך";
+"Delivery number"="מספר משלוח";
+"Urgency"="דחיפות";
+
 
 
 "Total Order"="Total Order"; //new
@@ -90,7 +96,7 @@
 "Order Detail"="Order Detail";//New
 "Delivery number"="מס' משלוח";
 "Detail"="פרט";
-"Order Status"="Order Status";//new
+"Order Status"="סטטוס משלוח";//new
 "Order Information"="Order Information";//new
 "Information"="Information";//new
 "Order Id"="Order Id";
@@ -132,6 +138,66 @@
 "order_detail_take_picture"="צלם תמונה";
 "order_detail_total"="סה\"כ";
 "order_detail_barcode_notmatch"="ברקוד אינו תואם";
+
+"Hour"="שעת קבלה";
+"Date"="תאריך";
+"Certificate number"="מס' תעודת משלוח";
+"Client name"="שם לקוח";
+"Customer name"="שם מזמין";
+"Type"="סוג משלוח";
+"Urgency"="מידת דחיפות";
+"Double type"="סוג כפולה";
+"Packages number"="מספר חבילות";
+"Cartons number"="מספר קרטונים";
+"Surfaces number"="מספר משטחים";
+"Afternoon"="אחה''צ";
+"Vehicle"="אמצעי הובלה";
+"From today to tomorrow"="מהיום למחר";
+"Collection from company"="איסוף מחברה";
+"Starting street"="רחוב מוצא";
+"Starting city"="ישוב מוצא";
+"Transfer to company"="העברה לחברה";
+"Destination street"="רחוב יעד";
+"Destination city"="ישוב יעד";
+"Standby"="המתנה";
+"Barcode"="ברקוד";
+"Collect call"="גוביינא";
+"Status"="סטטוס";
+"Failure cause"="סיבת הכשל";
+"Comments"="הערות";
+"Certificate number (Client)"="מספר תעודה (לקוח)";
+"Execution time"="זמן ביצוע";
+"Receiver name"="שם מקבל";
+"Second receiver name"="שם מקבל שני";
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 //REASON_LIST
 "Select Reason"="בחר סיבה";
