[DirectMail]- update RouteList

--- a/DMSDriver/DMSDriver/Supporting Files/Localize/he.lproj/Localizable.strings
+++ b/DMSDriver/DMSDriver/Supporting Files/Localize/he.lproj/Localizable.strings
@@ -169,6 +169,10 @@
 "Execution time"="זמן ביצוע";
 "Receiver name"="שם מקבל";
 "Second receiver name"="שם מקבל שני";
+"Start time"="Start time";//new
+"End time"="End time";//new
+"Werehouse"="Werehouse";//new
+
 
 
 
