--- a/DMSDriver/DMSDriver/Supporting Files/Localize/en.lproj/Localizable.strings
+++ b/DMSDriver/DMSDriver/Supporting Files/Localize/en.lproj/Localizable.strings
@@ -167,6 +167,10 @@
 "Execution time"="Execution time";
 "Receiver name"="Receiver name";
 "Second receiver name"="Second receiver name";
+"Start time"="Start time";
+"End time"="End time";
+"Werehouse"="Werehouse";
+
 
 
 
