[DirectMail]update localization

--- a/DMSDriver/DMSDriver/Supporting Files/Localize/en.lproj/Localizable.strings
+++ b/DMSDriver/DMSDriver/Supporting Files/Localize/en.lproj/Localizable.strings
@@ -188,6 +188,7 @@
 "You have no route"="You have no route";
 "Route Number"="Route number";
 "Route List"="Route List";
+"Route" = "Route";
 
 //PICTURE
 "No images have been added"="No images have been added";
