[DirectMail]- fixed issuehttps://seldat.atlassian.net/browse/DIR-51

--- a/DMSDriver/DMSDriver/Supporting Files/Localize/he.lproj/Localizable.strings
+++ b/DMSDriver/DMSDriver/Supporting Files/Localize/he.lproj/Localizable.strings
@@ -94,10 +94,10 @@
 
 
 //ODER_DETAIL
-"Order Detail"="פרטי הזמנה";//New
+"Order Detail"="פרטי הזמנה";
 "Delivery number"="מס' משלוח";
 "Detail"="פירוט";
-"Order Status"="סטטוס משלוח";//new
+"Order Status"="סטטוס משלוח";
 "Order Information"="מידע על ההזמנה";
 "Information"="מידע";
 "Order Id"="מספר הזמנה";
