[DirectMail] - Update phase 2

--- a/DMSDriver/DMSDriver/Supporting Files/Localize/en.lproj/Localizable.strings
+++ b/DMSDriver/DMSDriver/Supporting Files/Localize/en.lproj/Localizable.strings
@@ -70,6 +70,7 @@
 //LIST_ORDERS
 "Orders List"="Orders List";
 "You have no order"="You have no order";
+"No order" = "No order";
 "New"="New";
 "In Progress"="In Progress";
 "Finished"="Finished";
@@ -87,7 +88,10 @@
 "To date"="To date";
 "Delivery number"="Delivery number";
 "Urgency"="Urgency";
-
+"All"="All";//new
+"Assigned"="Assigned";//new
+"Mine"="Mine";//new
+"Driver"="Driver";
 
 
 //ODER_DETAIL
