--- a/DMSDriver/DMSDriver/Supporting Files/Localize/he.lproj/Localizable.strings
+++ b/DMSDriver/DMSDriver/Supporting Files/Localize/he.lproj/Localizable.strings
@@ -72,6 +72,7 @@
 //LIST_ORDERS
 "Orders List"="רשימת הזמנות";
 "You have no order"="אין לך הזמנה";
+"No order" = "שום סדר";
 "New"="חדש";
 "In Progress"="בתהליך";
 "Finished"="חדש";
@@ -86,11 +87,14 @@
 "Urgency"="דחיפות";
 
 
-
 "Total Order"= "סה''כ הזמנות";
 "Store"="חנות";
 "Warehouse"="מחסן";
 "Expected time"="Expected time";//New
+"All"="All";//new
+"Assigned"="Assigned";//new
+"Mine"="Mine";//new
+"Driver"="נהג";
 
 
 //ODER_DETAIL
