[DirectMail] - Fix https://seldat.atlassian.net/browse/DIR-107 and update orderList screen

--- a/DMSDriver/DMSDriver/Supporting Files/Localize/en.lproj/Localizable.strings
+++ b/DMSDriver/DMSDriver/Supporting Files/Localize/en.lproj/Localizable.strings
@@ -33,6 +33,7 @@
 "done"="Done";
 "Pull to refresh"="Pull to refresh";
 "Uploaded Successful"="Uploaded Successful";
+"No data"="No data";
 
 //LOGIN_SCREEN
 "login_title"="LOGIN";
