--- a/DMSDriver/DMSDriver/Supporting Files/Localize/he.lproj/Localizable.strings
+++ b/DMSDriver/DMSDriver/Supporting Files/Localize/he.lproj/Localizable.strings
@@ -32,6 +32,7 @@
 "Uploaded Successful"="החתימה הושלמה";
 "done"="אישור";
 "Pull to refresh"="לחץ כדי לרענן";
+"No data"="No data";//new
 
 //LOGIN_SCREEN
 "login_title"="התחברות";
