--- a/DMSDriver/DMSDriver/Supporting Files/Localize/en.lproj/Localizable.strings
+++ b/DMSDriver/DMSDriver/Supporting Files/Localize/en.lproj/Localizable.strings
@@ -53,6 +53,7 @@
 "Change Password"="Change Password";
 "Logout"="Logout";
 "Routes"="Routes";
+"Assign"="Assign";
 
 //PROFILE
 "First Name"="First Name";
