[Map] - fix https://seldat.atlassian.net/browse/DIR-111

--- a/DMSDriver/DMSDriver/Supporting Files/Localize/he.lproj/Localizable.strings
+++ b/DMSDriver/DMSDriver/Supporting Files/Localize/he.lproj/Localizable.strings
@@ -184,6 +184,14 @@
 "Coordination phone"="ת. טלפוני";
 
 
+//ORDER_ASSIGNMENT
+"Orders assignment"="Orders assignment";//new
+"Today"="Today";//new
+"Select date"="Select date";//new
+"Select Items"="Select Items";
+"Assign"="Assign";//new
+"Please select order."="Please select order.";//new
+"Assigned successfull."="Assigned successfull.";
 
 
 
