--- a/DMSDriver/DMSDriver/Supporting Files/Localize/en.lproj/Localizable.strings
+++ b/DMSDriver/DMSDriver/Supporting Files/Localize/en.lproj/Localizable.strings
@@ -180,8 +180,14 @@
 "Coordination phone"="Coordination phone";
 
 
-
-
+//ORDER_ASSIGNMENT
+"Orders assignment"="Orders assignment";//new
+"Today"="Today";//new
+"Select date"="Select date";//new
+"Select Items"="Select Items";
+"Assign"="Assign";//new
+"Please select order."="Please select order.";//new
+"Assigned successfull."="Assigned successfull.";
 
 
 
