--- a/DMSDriver/DMSDriver/Supporting Files/Localize/he.lproj/Localizable.strings
+++ b/DMSDriver/DMSDriver/Supporting Files/Localize/he.lproj/Localizable.strings
@@ -191,7 +191,7 @@
 "Select Items"="Select Items";
 "Assign"="Assign";//new
 "Please select order."="Please select order.";//new
-"Assigned successfull."="Assigned successfull.";
+"Assigned successfull."="Assigned successfull.";//new
 
 
 
