[orderDetail] update assign

--- a/DMSDriver/DMSDriver/Supporting Files/Localize/en.lproj/Localizable.strings
+++ b/DMSDriver/DMSDriver/Supporting Files/Localize/en.lproj/Localizable.strings
@@ -207,7 +207,11 @@
 "Route" = "Route";
 
 //PICTURE
+"Album Gallery"="Album Gallery";
+"Take photo"="Take photo";
 "No images have been added"="No images have been added";
+"Please add pictures in picture tap, before finish this order"="Please add pictures in picture tap, before finish this order";
+"Please add signature in signature tap, before finish this order"="Please add signature in signature tap, before finish this order";
 
 //PACKAGES
 "Delivery"="Delivery";
