--- a/DMSDriver/DMSDriver/Supporting Files/Localize/he.lproj/Localizable.strings
+++ b/DMSDriver/DMSDriver/Supporting Files/Localize/he.lproj/Localizable.strings
@@ -213,6 +213,8 @@
 "Album Gallery"="בחירה מתוך הגלריה";
 "Take photo"="צלם תמונה";
 "No images have been added"="לא נוספו תמונות";
+"Please add pictures in picture tap, before finish this order"="Please add pictures in picture tap, before finish this order";//new
+"Please add signature in signature tap, before finish this order"="Please add signature in signature tap, before finish this order";//new
 
 //PACKAGES
 "Delivery"="משלוח";
