[Gadot] upload image,photo to order

--- a/DMSDriver/DMSDriver/Supporting Files/Localize/he.lproj/Localizable.strings
+++ b/DMSDriver/DMSDriver/Supporting Files/Localize/he.lproj/Localizable.strings
@@ -267,3 +267,7 @@
 "Finish task successfully"="סיום משימה בוצע בהצלחה";
 "Task Status"="סטטוס משימה";
 "Task Information"="מידע על המשימה";
+
+//TIMER
+"Reminder"="Reminder";//new
+
