--- a/DMSDriver/DMSDriver/Supporting Files/Localize/en.lproj/Localizable.strings
+++ b/DMSDriver/DMSDriver/Supporting Files/Localize/en.lproj/Localizable.strings
@@ -263,3 +263,6 @@
 "Finish task successfully"="Finish task successfully";
 "Task Status"="Task Status";
 "Task Information"="Task Information";
+
+//TIMER
+"Reminder"="Reminder";
