[Socket] Clear on client conntect event when reconnect

--- a/DMSDriver/DMSDriver/Supporting Files/Localize/en.lproj/Localizable.strings
+++ b/DMSDriver/DMSDriver/Supporting Files/Localize/en.lproj/Localizable.strings
@@ -37,7 +37,7 @@
 "Session expired."="Session expired.";
 "Retry"="Retry";
 "You are in offline,some funtion may be restricted."="You are in offline,some funtion may be restricted.";
-
+"Sorry, this account is not use as Driver account. Please contact your administrator for more information"="Sorry, this account is not use as Driver account. Please contact your administrator for more information";
 
 //LOGIN_SCREEN
 "login_title"="LOGIN";
