--- a/DMSDriver/DMSDriver/Supporting Files/Localize/he.lproj/Localizable.strings
+++ b/DMSDriver/DMSDriver/Supporting Files/Localize/he.lproj/Localizable.strings
@@ -37,6 +37,8 @@
 "Session expired."="פג תוקף הפעילות באתר.";
 "Retry"="נסה שוב";
 "You are in offline,some funtion may be restricted."="החיבור לאינטרנט מנותק. חלק מהאפשרויות מוגבלות כרגע.";
+"Sorry, this account is not use as Driver account. Please contact your administrator for more information"="חשבון זה אינו חשבון נהג. צור קשר עם מנהל המערכת למידע נוסף.";
+
 //LOGIN_SCREEN
 "login_title"="התחברות";
 "login_username_hint"="שם משתמש";
